--- a/simulation/templates/template_structure_defense_tower_stone.xml
+++ b/simulation/templates/template_structure_defense_tower_stone.xml
@@ -7,6 +7,7 @@
       <MinRange>0</MinRange>
       <ElevationBonus>15</ElevationBonus>
     </Ranged>
+   </Attcak>
   <Cost>
     <BuildTime>80</BuildTime>
     <Resources>
