--- a/simulation/templates/template_structure_civic_civil_centre.xml
+++ b/simulation/templates/template_structure_civic_civil_centre.xml
@@ -106,14 +106,14 @@
       phase_town_{civ}
       phase_city_{civ}
       phase_kingdom_{civ}
-      cost_mercenary
+      -cost_mercenary
       unlock_spies
       spy_counter
       health_siege_rations_1
       health_siege_rations_2
       health_siege_rations_3
-      buildtime_structures_peasants
-      cost_structures_rubble
+      -buildtime_structures_peasants
+      -cost_structures_rubble
     </Technologies>
   </ProductionQueue>
   <ResourceDropsite>
