--- a/simulation/templates/template_structure_defense_tower_outpost.xml
+++ b/simulation/templates/template_structure_defense_tower_outpost.xml
@@ -63,7 +63,7 @@
   </Obstruction>
   <ProductionQueue>
     <Technologies datatype="tokens">
-      tower_night
+      -tower_night
       tower_vision
       tower_decay
     </Technologies>
