--- a/simulation/templates/template_structure_civic_civil_centre_military_colony.xml
+++ b/simulation/templates/template_structure_civic_civil_centre_military_colony.xml
@@ -61,8 +61,8 @@
       -phase_kingdom_{civ}
       health_siege_rations_1
       health_siege_rations_2
-      buildtime_structures_peasants
-      cost_structures_rubble
+      -buildtime_structures_peasants
+      -cost_structures_rubble
    </Technologies>
   </ProductionQueue>
   <Sound>
