--- a/simulation/templates/template_structure_economic_farmstead.xml
+++ b/simulation/templates/template_structure_economic_farmstead.xml
@@ -39,7 +39,7 @@
   <ProductionQueue>
     <BatchTimeModifier>0.8</BatchTimeModifier>
     <Technologies datatype="tokens">
-      gather_wicker_baskets
+      -gather_wicker_baskets
       gather_farming_plows
       gather_farming_training
       gather_farming_fertilizer
