--- a/simulation/templates/template_unit_support_female_citizen.xml
+++ b/simulation/templates/template_unit_support_female_citizen.xml
@@ -16,35 +16,32 @@
       <MaxRange>2</MaxRange>
     </Slaughter>
   </Attack>
-  <Auras datatype="tokens">
-    units/female_inspiration
-  </Auras>
   <Builder>
     <Rate>1.0</Rate>
     <Entities datatype="tokens">
-      -structures/{civ}_house
-      -structures/{civ}_storehouse
-      -structures/{civ}_farmstead
-      -structures/{civ}_field
-      -structures/{civ}_corral
+      structures/{civ}_house
+      structures/{civ}_storehouse
+      structures/{civ}_farmstead
+      structures/{civ}_field
+      structures/{civ}_corral
       -structures/{civ}_outpost
       -other/wallset_palisade
       -other/palisades_tall_spikes_3x1
       -structures/{civ}_sentry_tower
       -structures/{civ}_defense_tower
-      -structures/{civ}_dock
+      structures/{civ}_dock
       -structures/{civ}_barracks
       -structures/{civ}_range
       -structures/{civ}_stable
       -structures/{civ}_workshop
       -structures/{civ}_elephant_stables
       -structures/{civ}_blacksmith
-      -structures/{civ}_temple
-      -structures/{civ}_market
+      structures/{civ}_temple
+      structures/{civ}_market
       -structures/{civ}_wallset_stone
-      -structures/{civ}_civil_centre
+      structures/{civ}_civil_centre
       -structures/{civ}_fortress
-      -structures/{civ}_wonder
+      structures/{civ}_wonder
     </Entities>
   </Builder>
   <Cost>
@@ -73,14 +70,14 @@
     <MaxDistance>2.0</MaxDistance>
     <BaseSpeed>1.0</BaseSpeed>
     <Rates>
-      <food.fruit>1</food.fruit>
-      <food.grain>0.4</food.grain>
+      <food.fruit>0.8</food.fruit>
+      <food.grain>0.6</food.grain>
       <food.meat>1</food.meat>
-      <wood.tree>0.4</wood.tree>
+      <wood.tree>0.6</wood.tree>
       <wood.ruins>5</wood.ruins>
-      <stone.rock>0.3</stone.rock>
+      <stone.rock>0.4</stone.rock>
       <stone.ruins>2</stone.ruins>
-      <metal.ore>0.3</metal.ore>
+      <metal.ore>0.4</metal.ore>
     </Rates>
   </ResourceGatherer>
   <Sound>
