--- a/simulation/templates/template_unit_cavalry_ranged_archer.xml
+++ b/simulation/templates/template_unit_cavalry_ranged_archer.xml
@@ -19,6 +19,11 @@
      </Bonuses>
     </Ranged>
     </Attack>
+  <Cost>
+    <Resources>
+      <metal>40</metal>
+    </Resources>
+  </Cost>
   <Identity>
     <VisibleClasses datatype="tokens">Archer</VisibleClasses>
     <GenericName>Cavalry Archer</GenericName>
