--- a/simulation/templates/template_unit_infantry_ranged_archer.xml
+++ b/simulation/templates/template_unit_infantry_ranged_archer.xml
@@ -15,9 +15,12 @@
      </Bonuses>
     </Ranged>
   </Attack>
+  <Health>
+    <Max>70</Max>
+  </Health>
   <Cost>
     <Resources>
-      <food>70</food>
+      <food>80</food>
       <wood>0</wood>
       <metal>20</metal>
     </Resources>
