--- a/simulation/templates/template_unit_infantry_ranged_slinger.xml
+++ b/simulation/templates/template_unit_infantry_ranged_slinger.xml
@@ -20,6 +20,7 @@
     </Ranged>
   </Attack>
   <Cost>
+    <BuildTime>8</BuildTime>
     <Resources>
       <food>70</food>
       <stone>20</stone>
