--- a/simulation/templates/template_unit_infantry_melee_swordsman.xml
+++ b/simulation/templates/template_unit_infantry_melee_swordsman.xml
@@ -17,6 +17,7 @@
     </Melee>
   </Attack>
   <Cost>
+    <BuildTime>12</BuildTime>
     <Resources>
       <food>80</food>
       <metal>30</metal>
