--- a/simulation/templates/template_unit_infantry_ranged_archer.xml
+++ b/simulation/templates/template_unit_infantry_ranged_archer.xml
@@ -11,14 +11,13 @@
       <PrepareTime>500</PrepareTime>
       <RepeatTime>1000</RepeatTime>
       <Spread>3.0</Spread>
-      <Bonuses>
-     </Bonuses>
     </Ranged>
   </Attack>
   <Health>
     <Max>70</Max>
   </Health>
   <Cost>
+    <BuildTime>12</BuildTime>
     <Resources>
       <food>80</food>
       <wood>0</wood>
