--- a/simulation/templates/template_structure_military_barracks_stables.xml
+++ b/simulation/templates/template_structure_military_barracks_stables.xml
@@ -51,8 +51,7 @@
       units/{civ}_cavalry_archer_b
     </Entities>
     <Technologies datatype="tokens">
-      -attack_spear_pike
-      -speed_inf_melee
+     -military_training
     </Technologies>
   </ProductionQueue>
   <Sound>
