--- a/simulation/templates/template_unit_champion_elephant.xml
+++ b/simulation/templates/template_unit_champion_elephant.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Entity parent="template_unit_champion">
+  <Auras datatype="tokens">
+   units/war_elephant_trample
+   units/war_elephant_collision
+  </Auras>
   <Armour>
     <Hack>8</Hack>
     <Pierce>8</Pierce>
