--- a/simulation/templates/template_unit_support_female_citizen.xml
+++ b/simulation/templates/template_unit_support_female_citizen.xml
@@ -30,7 +30,7 @@
       -structures/{civ}_sentry_tower
       -structures/{civ}_defense_tower
       structures/{civ}_dock
-      structures/{civ}_barracks
+      -structures/{civ}_barracks
       -structures/{civ}_range
       -structures/{civ}_stable
       -structures/{civ}_workshop
