--- a/simulation/templates/template_structure_civic_civil_centre.xml
+++ b/simulation/templates/template_structure_civic_civil_centre.xml
@@ -99,7 +99,13 @@
   <ProductionQueue>
     <BatchTimeModifier>0.8</BatchTimeModifier>
     <Entities datatype="tokens">
-      units/{civ}_support_female_citizen   
+      units/{civ}_support_female_citizen 
+      units/{civ}_infantry_spearman_b
+      units/{civ}_infantry_pikeman_b
+      units/{civ}_infantry_swordsman_b
+      units/{civ}_infantry_javelinist_b
+      units/{civ}_infantry_slinger_b
+      units/{civ}_infantry_archer_b  
     </Entities>
     <Technologies datatype="tokens">
       phase_town_{civ}
