--- a/simulation/templates/template_unit_infantry_melee_pikeman.xml
+++ b/simulation/templates/template_unit_infantry_melee_pikeman.xml
@@ -6,14 +6,14 @@
   </Armour>
   <Attack>
     <Melee>
-      <Hack>5.0</Hack>
+      <Hack>6.0</Hack>
       <MaxRange>4.0</MaxRange>
       <PrepareTime>1000</PrepareTime>
       <RepeatTime>1250</RepeatTime>
       <Bonuses>
           <Bonus1>
             <Classes>Cavalry</Classes>
-            <Multiplier>2.0</Multiplier>
+            <Multiplier>2.5</Multiplier>
           </Bonus1>
           <Bonus2>
             <Classes>Elephant</Classes>
@@ -25,7 +25,7 @@
   <Cost>
     <BuildTime>8</BuildTime>
     <Resources>
-      <food>70</food>
+      <food>80</food>
       <metal>10</metal>
     </Resources>
   </Cost>
@@ -39,6 +39,20 @@
       special/formations/syntagma
     </Formations>
   </Identity>
+  <ResourceGatherer>
+    <MaxDistance>2.0</MaxDistance>
+    <BaseSpeed>1.0</BaseSpeed>
+    <Rates>
+      <food.fruit>0.8</food.fruit>
+      <food.grain>0.8</food.grain>
+      <food.meat>1</food.meat>
+      <wood.tree>0.7</wood.tree>
+      <wood.ruins>5</wood.ruins>
+      <stone.rock>0.6</stone.rock>
+      <stone.ruins>3</stone.ruins>
+      <metal.ore>0.6</metal.ore>
+    </Rates>
+  </ResourceGatherer>
   <Loot>
     <wood>6</wood>
     <food>6</food>
