--- a/simulation/templates/template_unit_hero_elephant_melee.xml
+++ b/simulation/templates/template_unit_hero_elephant_melee.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Entity parent="template_unit_hero">
   <Auras datatype="tokens">
+   units/elephant_fear
    units/war_elephant_trample
    units/war_elephant_collision
   </Auras>
