--- a/simulation/templates/template_structure_defense_wall_gate.xml
+++ b/simulation/templates/template_structure_defense_wall_gate.xml
@@ -9,6 +9,13 @@
   <Health>
     <Max op="mul">0.85</Max>
   </Health>
+    <Cost>
+    <BuildTime>10</BuildTime>
+    <Resources>
+      <wood>0</wood>
+      <stone>60</stone>
+    </Resources>
+  </Cost>
   <Identity>
     <Classes datatype="tokens">Gates</Classes>
     <GenericName>City Gate</GenericName>
