--- a/simulation/templates/template_structure_civic_temple.xml
+++ b/simulation/templates/template_structure_civic_temple.xml
@@ -12,6 +12,7 @@
     <Resources>
       <wood>0</wood>
       <stone>300</stone>
+      <food>500</food>
     </Resources>
   </Cost>
   <Footprint>
