--- a/simulation/templates/template_structure_military_blacksmith.xml
+++ b/simulation/templates/template_structure_military_blacksmith.xml
@@ -60,6 +60,7 @@
       armor_cav_02
       armor_cav_03
       attack_steel_working
+      armor_hero_01
     </Technologies>
   </ProductionQueue>
   <Sound>
