--- a/simulation/templates/template_structure_defense_tower_stone.xml
+++ b/simulation/templates/template_structure_defense_tower_stone.xml
@@ -50,7 +50,7 @@
     </Technologies>
   </ProductionQueue>
   <TerritoryInfluence>
-    <Root>false</Root>
+    <Root>true</Root>
     <Radius>32</Radius>
     <Weight>30000</Weight>
   </TerritoryInfluence>
