--- a/simulation/templates/template_structure_military_barracks.xml
+++ b/simulation/templates/template_structure_military_barracks.xml
@@ -67,7 +67,7 @@
     </SoundGroups>
   </Sound>
   <TerritoryInfluence>
-    <Root>false</Root>
+    <Root>true</Root>
     <Radius>50</Radius>
     <Weight>40000</Weight>
   </TerritoryInfluence>
