--- a/simulation/templates/template_structure_civic_temple.xml
+++ b/simulation/templates/template_structure_civic_temple.xml
@@ -68,7 +68,7 @@
     </SoundGroups>
   </Sound>
   <TerritoryInfluence>
-    <Root>false</Root>
+    <Root>true</Root>
     <Radius>40</Radius>
     <Weight>30000</Weight>
   </TerritoryInfluence>
