--- a/simulation/templates/template_structure_military_elephant_stables.xml
+++ b/simulation/templates/template_structure_military_elephant_stables.xml
@@ -63,7 +63,7 @@
     </SoundGroups>
   </Sound>
   <TerritoryInfluence>
-    <Root>false</Root>
+    <Root>true</Root>
     <Radius>38</Radius>
     <Weight>40000</Weight>
   </TerritoryInfluence>
